added get loans endpoint
