# backend/Modules/Loan/Server.Loan.Contracts/Features/Loan/GetLoan/GetLoansQueryResponse.cs
@@ -1,0 +1,3 @@
+﻿namespace Server.Loan.Contracts.Features.Loan.GetLoan;
+
+public record GetLoansQueryResponse(List<LoanDto> Loans);
