# backend/Modules/Loan/Server.Loan.Contracts/Features/Loan/GetLoan/LoanDto.cs
@@ -1,0 +1,13 @@
+﻿namespace Server.Loan.Contracts.Features.Loan.GetLoan;
+
+public record LoanDto(string Id,
+                        int LoanAmount,
+                        int LoanTerm,
+                        int LoanPurpose,
+                        string BankAccountNumber,
+                        string BankAccountType,
+                        string BankName,
+                        string FullName,
+                        string Email,
+                        DateTime DateOfBirth,
+                        int LoanStatus);
