# backend/Modules/Loan/Server.Loan.EndPoints/Loan/GetLoans/GetLoansResponse.cs
@@ -1,0 +1,3 @@
+﻿namespace Server.Loan.EndPoints.Loan.GetLoans;
+
+internal record GetLoansResponse(List<Loan> Loans);     
